finished foundation of text section. began foundation of button section.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 
                 <div class="text-container">
                     <span>
-                        This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.          
+                        This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.           
+                    </span>
+                    <span>
+                        Sign up <em>now</em> to get started.
                     </span>
                     
                     <span>
